# phaenonet-functions

./: .bandit  .flake8  .gcloudignore  .gitignore  .gitmodules  .markdownlint.json  .pylintrc  Pipfile  README.md  clear_cached.sh  config_static.json  deploy.sh  env.phaenonet-test.yaml  env.phaenonet.yaml  main.py  pyproject.toml  renovate.json  requirements.txt  undeploy.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup.sh
.github/: renovate.json
.github/actions/deploy-extensions/: action.yml
.github/actions/remove-extensions/: action.yml
.github/workflows/: copyback.yml  deploy-function.yml  deploy-schedules.yml  deploy.yml  extensions.yml  main.yml  requirements.yml  updated.yml  version-updater.yml
docs/: datamodel.md
fb/: .firebaserc  .gitignore  firebase.json
fb/extensions/: firestore-bigquery-definitions.env  firestore-bigquery-individuals.env  firestore-bigquery-observations.env  firestore-bigquery-users.env
firebase/: .firebaserc  firebase.json
firebase/extensions/: firestore-bigquery-definitions.env  firestore-bigquery-individuals.env  firestore-bigquery-observations.env  firestore-bigquery-users.env
phenoback/: __init__.py
phenoback/functions/: activity.py  analytics.py  documents.py  e2e.py  individual.py  map.py  meteoswiss.py  meteoswiss_export.py  meteoswiss_import.py  observation.py  phenorangers.py  rollover.py  statistics.py  thumbnails.py  users.py  wld_import.py
phenoback/functions/invite/: content.py  de.html.j2  de.txt.j2  envelopesmail.py  fr.html.j2  fr.txt.j2  invite.py  it.html.j2  it.txt.j2  register.py
phenoback/functions/iot/: app.py  bq.py  decoder.py  dragino.py  permarobotics.py
phenoback/functions/statistics/: README.md  datacache.py  readme.md  weekly.py  yearly.py
phenoback/gcloud/: __init__.py  glogging.py  utils.py
phenoback/utils/: __init__.py  bq.py  data.py  firestore.py  gcloud.py  glogging.py  gsecrets.py  pubsub.py  storage.py  tasks.py
test/: __init__.py  conftest.py  emulator.py  manual_i18n.py  manual_logging.py  test_activity.py  test_analytics.py  test_data.py  test_documents.py  test_e2e.py  test_firestore.py  test_gcloud.py  test_github.py  test_gsecrets.py  test_invite.py  test_main.py  test_map.py  test_meteoswiss.py  test_meteoswiss_import.py  test_observations.py  test_phenorangers.py  test_rollover.py  test_tasks.py  test_thumbnails.py  test_users.py  test_utils.py  test_wld_import.py  utils.py
test/functions/: test_activity.py  test_analytics.py  test_documents.py  test_e2e.py  test_individual.py  test_invite.py  test_map.py  test_meteoswiss_export.py  test_meteoswiss_import.py  test_phenorangers.py  test_rollover.py  test_statistics.py  test_thumbnails.py  test_users.py  test_wld_import.py
test/functions/iot/: sample_data.py  test_app.py  test_bq.py  test_decoder.py  test_dragino.py  test_permarobotics.py
test/functions/statistics/: test_datacache.py  test_weekly.py  test_yearly.py
test/invite/: test_invite.py
test/resources/: config_dynamic.json  config_static.json  meteoswiss_mapping.json  meteoswiss_observations.csv  meteoswiss_stations.csv
test/utils/: test_bq.py  test_data.py  test_firestore.py  test_gcloud.py  test_gsecrets.py  test_pubsub.py  test_storage.py  test_tasks.py  test_tasks_gcf.py  test_tasks_http.py
