[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.setuptools]
py-modules = []

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
default = true

[project]
name = "phaenonet-functions"
dynamic = ["version"]
requires-python = "==3.12.12"
dependencies = [
    "firebase-admin>=7.2.0",
    "numpy>=2.4.2",
    "dateparser>=1.3.0",
    "google-cloud-logging>=3.14.0",
    "sentry-sdk>=2.54.0",
    "jinja2>=3.1.6",
    "envelopes>=0.4",
    "tinify>=1.7.1",
    "google-cloud-secret-manager>=2.26.0",
    "flask>=3.1.3",
    "google-cloud-tasks>=2.21.0",
    "google-cloud-pubsub>=2.35.0",
    "google-cloud-bigquery>=3.40.1",
    "functions-framework>=3.10.1"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pylint>=4.0.5",
    "black>=26.3.0",
    "flake8>=7.3.0",
    "bandit>=1.9.4",
    "pytest-xprocess>=1.0.2",
    "isort>=8.0.1",
    "strictyaml>=1.7.3",
    "tqdm>=4.67.3",
    "zizmor>=1.23.1",
    "actionlint-py>=1.7.11.24",
]
